clusters/k8s-keiretsu/apps/mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto
        ports:
        - containerPort: 1883
        volumeMounts:
        - mountPath: /etc/mosquitto/
          name: config
        - mountPath: /mosquitto/certs/
          name: certs
        - mountPath: /mosquitto/data/
          name: data
        - mountPath: /etc/mosquitto/
          name: password
      volumes:
      - name: config
        configMap:
          name: mqtt-config
      - name: certs
        secret:
          secretName: mqtt-tls
      - name: data
        persistentVolumeClaim:
          claimName: mqtt-data
      - name: password
        emptryDir: {}
