clusters/k8s-keiretsu/apps/mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt
spec:
  selector:
    app: mqtt
  ports:
  - name: mqtt
    port: 1883
    protocol: TCP
    targetPort: 1883
  type: LoadBalancer
