clusters/k8s-keiretsu/apps/mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqtt-tls
  namespace: home
  annotations:
    cert-manager.io/cluster-issuer: luke-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: nginx
  tls:
  - secretName: mqtt-tls
    hosts:
    - mqtt.lukehouge.com
  rules:
  - host: mqtt.lukehouge.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mqtt
            port: 
              number: 1883
